--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="console"></div>
   <video autoplay id="videoInput" width="320" height="240"></video>
   <canvas id="videoOutput" width="320" height="240"></canvas>
-  <script src="index.js">
+  <script src="./index.js">
   </script>
 </body>
 
