--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Coco SSD</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"> </script>
+    <script src="./tf.min.js"> </script>
+    <script src="./coco-ssd.js"> </script>
 </head>
 
 <body>
